<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_blue"
    tools:context="com.example.androidjr.login.presentation.ui.LoginActivity">

    <ImageView
        android:id="@+id/image_android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.29000002"
        app:srcCompat="@drawable/desenho_android"
        android:contentDescription="@string/android_image" />

    <TextView
        android:id="@+id/text_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:text="@string/your_junior_mobile_job_app"
        android:textColor="@color/white"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="@+id/image_android"
        app:layout_constraintStart_toStartOf="@+id/image_android"
        app:layout_constraintTop_toBottomOf="@+id/image_android" />

    <ImageView
        android:id="@+id/image_google_logo"
        android:layout_width="23dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/button_google_login"
        app:layout_constraintEnd_toEndOf="@+id/button_google_login"
        app:layout_constraintHorizontal_bias="0.20"
        app:layout_constraintStart_toStartOf="@+id/button_google_login"
        app:layout_constraintTop_toTopOf="@+id/button_google_login"

        app:srcCompat="@drawable/logo_google_48dp"
        android:elevation="10dp"
        android:contentDescription="@string/google_image" />

    <Button
        android:id="@+id/button_google_login"
        android:layout_width="320dp"
        android:layout_height="54dp"
        android:layout_marginTop="86dp"
        android:layout_marginEnd="16dp"
        android:paddingLeft="60dp"
        android:backgroundTint="@color/white"
        android:elevation="5dp"
        android:fontFamily="@font/roboto"
        android:letterSpacing="0.01"
        android:text="@string/sign_in_with_google"
        android:textAllCaps="false"
        android:textColor="@color/light_gray"
        android:textSize="20sp"
        android:textStyle="bold"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_logo" />

    <TextView
        android:id="@+id/text_access_without_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_without_account"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:fontFamily="@font/roboto"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/button_google_login"
        app:layout_constraintStart_toStartOf="@+id/button_google_login"
        app:layout_constraintEnd_toEndOf="@+id/button_google_login"/>

</androidx.constraintlayout.widget.ConstraintLayout>