<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".profile.presentation.ui.ProfileFragment">


    <androidx.cardview.widget.CardView
        android:id="@+id/cardview"
        android:layout_width="344dp"
        android:layout_height="507dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="147dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="147dp"
        android:backgroundTint="@color/background_cardview_profile"
        app:cardCornerRadius="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_card"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@id/cardview"
        app:layout_constraintEnd_toEndOf="@id/cardview"
        app:layout_constraintBottom_toBottomOf="@id/cardview"
        app:layout_constraintStart_toStartOf="@id/cardview"
        android:elevation="10dp">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/image_profile"
        android:layout_width="87dp"
        android:layout_height="87dp"
        app:srcCompat="@drawable/avatar_profile"
        android:contentDescription="@string/main_profile_img_cardview"
        android:layout_marginTop="26dp"
        app:layout_constraintTop_toTopOf="@id/layout_card"
        app:layout_constraintStart_toStartOf="@id/layout_card"
        app:layout_constraintEnd_toEndOf="@id/layout_card"
        app:shapeAppearance="@style/ShapeAppearanceOverlay.Material3.Button" />

        <TextView
        android:id="@+id/text_name"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:fontFamily="@font/roboto"
        tools:text="João Silva"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/layout_card"
        app:layout_constraintStart_toStartOf="@id/layout_card"
        app:layout_constraintTop_toBottomOf="@id/image_profile"
        android:layout_marginTop="16dp" />
        
        <TextView
            android:id="@+id/text_profession"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            tools:text="Android Developer"
            android:textColor="@color/white"
            android:fontFamily="@font/roboto"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@id/text_name"
            app:layout_constraintStart_toStartOf="@id/layout_card"
            app:layout_constraintEnd_toEndOf="@id/layout_card" />

        <TextView
            android:id="@+id/text_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="São Paulo, SP"
            android:textColor="@color/white"
            android:fontFamily="@font/roboto"
            android:layout_marginTop="8dp"
            android:layout_marginStart="12dp"
            app:layout_constraintTop_toBottomOf="@id/text_profession"
            app:layout_constraintStart_toStartOf="@id/layout_card"
            app:layout_constraintEnd_toEndOf="@id/layout_card"/>

        <ImageView
            android:layout_width="16dp"
            android:layout_height="20dp"
            android:layout_marginTop="8dp"
            app:srcCompat="@drawable/ic_location"
            app:layout_constraintStart_toStartOf="@id/text_profession"
            app:layout_constraintBottom_toBottomOf="@id/text_location"
            android:contentDescription="@string/ic_location"/>
        
        <TextView
            android:id="@+id/text_title_linkedin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Linkedin"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginStart="74dp"
            android:fontFamily="@font/roboto"
            android:textColor="@color/white"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="@id/layout_card"
            app:layout_constraintTop_toBottomOf="@id/text_location" />

        <TextView
            android:id="@+id/text_linkedin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="www.linkedin.com/in/joao-silva"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:layout_marginTop="4dp"
            app:layout_constraintStart_toStartOf="@id/text_title_linkedin"
            app:layout_constraintTop_toBottomOf="@id/text_title_linkedin"/>

        <TextView
            android:id="@+id/text_title_github"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="GitHub"
            android:textSize="18sp"
            android:textStyle="bold"
            android:fontFamily="@font/roboto"
            android:textColor="@color/white"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="@id/text_linkedin"
            app:layout_constraintTop_toBottomOf="@id/text_linkedin" />

        <TextView
            android:id="@+id/text_github"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="www.github.com/joaosilva"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:layout_marginTop="4dp"
            app:layout_constraintStart_toStartOf="@id/text_title_github"
            app:layout_constraintTop_toBottomOf="@id/text_title_github"/>

        <TextView
            android:id="@+id/text_title_languages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Linguagens"
            android:textSize="18sp"
            android:textStyle="bold"
            android:fontFamily="@font/roboto"
            android:textColor="@color/white"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="@id/text_github"
            app:layout_constraintTop_toBottomOf="@id/text_github" />

        <TextView
            android:id="@+id/text_languages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Swift, Kotlin, Java, Javascript"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:layout_marginTop="4dp"
            app:layout_constraintStart_toStartOf="@id/text_title_languages"
            app:layout_constraintTop_toBottomOf="@id/text_title_languages"/>

        <Button
            android:id="@+id/button_exit_profile"
            android:layout_width="160dp"
            android:layout_height="48dp"
            style="?attr/materialButtonOutlinedStyle"
            android:text="@string/btn_exit_profile"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginTop="24dp"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toStartOf="@id/button_edit_profile"
            app:layout_constraintStart_toStartOf="@id/layout_card"
            app:layout_constraintTop_toBottomOf="@id/text_languages" />

        <Button
            android:id="@+id/button_edit_profile"
            android:layout_width="0dp"
            android:layout_height="48dp"
            style="?attr/materialButtonOutlinedStyle"
            android:text="@string/btn_edit_profile"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="@id/layout_card"
            app:layout_constraintStart_toEndOf="@id/button_exit_profile"
            app:layout_constraintTop_toBottomOf="@id/text_languages" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>